Amend: Add config ...

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,3 +3,9 @@ CONFIG_DEVICE_SHELL=y
 CONFIG_KERNEL_SHELL=y
 
 CONFIG_CBPRINTF_FP_SUPPORT=y
+
+CONFIG_GPIO=y
+CONFIG_I2C=y
+CONFIG_I2C_0=y
+CONFIG_SENSOR=y
+CONFIG_LIS2DH=n
