--- a/app/prj.conf
+++ b/app/prj.conf
@@ -9,3 +9,9 @@ CONFIG_I2C=y
 CONFIG_I2C_0=y
 CONFIG_SENSOR=y
 CONFIG_LIS2DH=n
+
+CONFIG_RING_BUFFER=y
+
+# Debug/Dummy, TODO: remove
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
