Amend: api for writing to disk

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,17 +1,46 @@
+# Shell
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_KERNEL_SHELL=y
 
+# Print float support
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
+# bus config
 CONFIG_GPIO=y
+
 CONFIG_I2C=y
 CONFIG_I2C_0=y
+CONFIG_I2C_NRFX=y
+
+CONFIG_SPI=y
+# CONFIG_SPI_1=y # TODO: ?
+
+# Accelerometer
 CONFIG_SENSOR=y
 CONFIG_LIS2DH=n
 
+# Ring buffer
 CONFIG_RING_BUFFER=y
 
 # Debug/Dummy, TODO: remove
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
+
+# TODO:
+# CONFIG_MAIN_STACK_SIZE=...
+
+# Logging
+# CONFIG_LOG=y
+
+# Storage, Disk Access
+CONFIG_DISK_ACCESS=y
+# CONFIG_DISK_SDHC_VOLUME_NAME="SD" # TODO: deprecated?, defaults to "SD" if FAT_FILESYSTEM_ELM
+
+# File system
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+
+
+# SD card driver
+CONFIG_DISK_DRIVER_SDMMC=y # TODO: ?
