--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,4 +7,5 @@ project(vibration_module)
 target_sources(app PRIVATE src/main.c
                            src/accelerometer/lis2dh12/lis2dh12.c
                            src/accelerometer/accelerometer.c
+                           src/writer/disk/disk.c
                            src/writer/writer.c)
