--- a/app/prj.conf
+++ b/app/prj.conf
@@ -26,12 +26,14 @@ CONFIG_RING_BUFFER=y
 # Debug/Dummy, TODO: remove
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
+CONFIG_DEBUG_COREDUMP=y
+CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
 
 # TODO:
 # CONFIG_MAIN_STACK_SIZE=...
 
 # Logging
-# CONFIG_LOG=y
+CONFIG_LOG=y
 
 # Storage, Disk Access
 CONFIG_DISK_ACCESS=y
@@ -44,3 +46,9 @@ CONFIG_FAT_FILESYSTEM_ELM=y
 
 # SD card driver
 CONFIG_DISK_DRIVER_SDMMC=y # TODO: ?
+
+CONFIG_DEBUG_INFO=y
+CONFIG_EXCEPTION_STACK_TRACE=y
+
+CONFIG_HW_STACK_PROTECTION=y
+CONFIG_STACK_CANARIES=y
