feat: Add logging kernel config options

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,4 +1,18 @@
-# Shell
+###### Shell ###################################################################
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_KERNEL_SHELL=y
+
+###### Logging #################################################################
+CONFIG_LOG=y
+
+# TODO
+CONFIG_LOG_MODE_DEFERRED=y
+# CONFIG_LOG_MODE_IMMEDIATE=y
+# CONFIG_LOG_MODE_MINIMAL=y
+
+# Logging levels
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_LOG_MAX_LEVEL=4
+
+# CONFIG_LOG_PRINTK=y
