feat: Add accelerometer (peripheral) support
- blip devicetree overlay
- kconfig options for the peripheral
  - GPIO, I2C
  - TODO: CONFIG_LIS2DH=n?

- Floating point numbers printk support

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -16,3 +16,19 @@ CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_LOG_MAX_LEVEL=4
 
 # CONFIG_LOG_PRINTK=y
+
+###### Peripherals #############################################################
+# GPIO
+CONFIG_GPIO=y
+
+# I2C
+CONFIG_I2C=y
+CONFIG_I2C_0=y
+CONFIG_I2C_NRFX=y
+
+# Accelerometer
+CONFIG_SENSOR=y
+CONFIG_LIS2DH=n
+
+###### Other ###################################################################
+CONFIG_CBPRINTF_FP_SUPPORT=y
