sq, delete: "Borrow" some code + auto-format (doesn't compile)

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,4 +4,5 @@ project(vibration_module)
 
 target_sources(app PRIVATE
                src/main.c
+               src/accelerometer/lis2dh12/lis2dh12.c
               )
