test: Add shell commands for debugging/testing lis2dh12.h functions

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,4 +5,5 @@ project(vibration_module)
 target_sources(app PRIVATE
                src/main.c
                src/accelerometer/lis2dh12/lis2dh12.c
+               src/shell_debug/lis2dh12_shell_debug.c
               )
