feat: Add accelerometer service from service_template

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,5 +5,6 @@ project(vibration_module)
 target_sources(app PRIVATE
                src/main.c
                src/accelerometer/lis2dh12/lis2dh12.c
+               src/accelerometer/accelerometer.c
                src/shell_debug/lis2dh12_shell_debug.c
               )
