sq: kconfig ringbuffer

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -32,3 +32,4 @@ CONFIG_LIS2DH=n
 
 ###### Other ###################################################################
 CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_RING_BUFFER=y
