--- a/app/prj.conf
+++ b/app/prj.conf
@@ -33,3 +33,18 @@ CONFIG_LIS2DH=n
 ###### Other ###################################################################
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_RING_BUFFER=y
+
+CONFIG_MAIN_STACK_SIZE=2048
+
+###### DEBUG ###################################################################
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_COREDUMP=y
+CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
+
+CONFIG_HW_STACK_PROTECTION=y
+CONFIG_STACK_CANARIES=y
+
+CONFIG_EXCEPTION_STACK_TRACE=y
