feat: Add SD card (peripheral) support
- blip devicetree overlay
- kconfig options for the peripheral
  - SPI
  - DISK_ACCESS
  - FILE SYSTEM
  - ...

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -30,6 +30,19 @@ CONFIG_I2C_NRFX=y
 CONFIG_SENSOR=y
 CONFIG_LIS2DH=n
 
+# SPI
+CONFIG_SPI=y
+
+# Storage, Disk access
+CONFIG_DISK_ACCESS=y
+
+# File system
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+
+# SD card
+CONFIG_DISK_DRIVER_SDMMC=y
+
 ###### Other ###################################################################
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_RING_BUFFER=y
