sq, feat: Add wrappers around fs functions, example how to write to disk

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,7 +4,10 @@ project(vibration_module)
 
 target_sources(app PRIVATE
                src/main.c
+
                src/accelerometer/lis2dh12/lis2dh12.c
                src/accelerometer/accelerometer.c
                src/shell_debug/lis2dh12_shell_debug.c
+
+               src/writer/disk/disk.c
               )
