feat: Add kernel config options for pwm and prepare device overlay

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -43,6 +43,9 @@ CONFIG_FAT_FILESYSTEM_ELM=y
 # SD card
 CONFIG_DISK_DRIVER_SDMMC=y
 
+# PWM
+CONFIG_PWM=y
+
 ###### Other ###################################################################
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_RING_BUFFER=y
@@ -50,14 +53,19 @@ CONFIG_RING_BUFFER=y
 CONFIG_MAIN_STACK_SIZE=2048
 
 ###### DEBUG ###################################################################
+# Random
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 
+# Coredump
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_COREDUMP=y
 CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
 
+# Stack
 CONFIG_HW_STACK_PROTECTION=y
 CONFIG_STACK_CANARIES=y
-
 CONFIG_EXCEPTION_STACK_TRACE=y
+
+# PWM
+CONFIG_PWM_LOG_LEVEL_DBG=n
