feat: Add PWM module for controlling the ESC (device specific ...)
- read comments
- read ESC manual

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -11,4 +11,6 @@ target_sources(app PRIVATE
 
                src/writer/disk/disk.c
                src/writer/writer.c
+
+               src/esc_pwm/esc_pwm.c
               )
