sq: kconfig change log str limit

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -17,6 +17,10 @@ CONFIG_LOG_MAX_LEVEL=4
 
 # CONFIG_LOG_PRINTK=y
 
+# TODO
+CONFIG_LOG_STRDUP_BUF_COUNT=20
+# CONFIG_LOG_BUFFER_SIZE=15000
+
 ###### Peripherals #############################################################
 # GPIO
 CONFIG_GPIO=y
