--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,7 +7,9 @@ target_sources(app PRIVATE
 
                src/accelerometer/lis2dh12/lis2dh12.c
                src/accelerometer/accelerometer.c
+               # src/shell_debug/lis2dh12_shell_debug.c
 
                src/esc_pwm/esc_pwm.c
 
+               src/tester_python/tester_python.c
               )
