Disable shell colors

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,6 +2,7 @@
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_KERNEL_SHELL=y
+CONFIG_SHELL_VT100_COLORS=n
 
 ###### Logging #################################################################
 CONFIG_LOG=y
