--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,6 +2,7 @@
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_KERNEL_SHELL=y
+CONFIG_SHELL_VT100_COLORS=n
 
 ###### Logging #################################################################
 CONFIG_LOG=y
@@ -43,6 +44,7 @@ CONFIG_DISK_ACCESS=y
 # File system
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_FS_FATFS_LFN=y
 
 # SD card
 CONFIG_DISK_DRIVER_SDMMC=y
