feat (tester): Python implementation

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -15,4 +15,5 @@ target_sources(app PRIVATE
                src/esc_pwm/esc_pwm.c
 
                src/tester/tester.c
+               #src/tester_python/tester_python.c
               )
